# VIXULI

./: .gitignore  config.sh  nduc.bat
18-11-2024/: text.md
4-11-2024/: .$sequence.drawio.bkp  GHIAM.MD  README.md  Untitled Diagram.drawio  algorithm.drawio  algorithm.txt  code.c  main.c  motor.c  sequence.drawio  test.drawio
4-11-2024/project-name/: CMakeLists.txt
4-11-2024/project-name/main/: main.c
CODE-ARDUINO-IDE/main/: Lib.cpp  Lib.h  main.ino
CODE-ARDUINO-IDE/main/sketch_dec29a/: sketch_dec29a.ino
ENCODER/: CMakeLists.txt  sdkconfig
ENCODER/components/i2c/: CMakeLists.txt  HD44780.c
ENCODER/components/lcd/: lcd.c  lcd.h
ENCODER/main/: rotary_encoder_example_main.c
MAIN/motor/: CMakeLists.txt  MUSTREAD.md  sdkconfig  todo.txt
MAIN/motor/components/button/: CMakeLists.txt  button.c  button.h
MAIN/motor/components/http_client/: CMakeLists.txt  http_client.h
MAIN/motor/components/http_server/: http_server.c  http_server.h
MAIN/motor/components/lcd/: CMakeLists.txt  lcd2024.c  lcd2024.h
MAIN/motor/components/lcd2024/: CMakeLists.txt  lcd2024.c  lcd2024.h
MAIN/motor/components/motor/: CMakeLists.txt  motor.c  motor.h
MAIN/motor/components/state/: CMakeLists.txt  state.cpp  state.h
MAIN/motor/components/test/: CMakeLists.txt  test.h
MAIN/motor/components/test_compo/: CMakeLists.txt  test_compo.c
MAIN/motor/components/wifi_connect/: CMakeLists.txt  wifi_connect.c
MAIN/motor/main/: main.c  main.cpp
TEST-ROTARY-ENCODER/esp-idf-RotaryEncoder-main/: sdkconfig
VXL-ESP/Test/: CMakeLists.txt  README.md  run.bat  setuptest.bat  setuptest.sh  test.sh
VXL-ESP/Test/components/RotaryEncoder/: CMakeLists.txt  RotaryEncoder.c  RotaryEncoder.h
VXL-ESP/Test/components/http_client/: CMakeLists.txt  http_client.c  http_client.h
VXL-ESP/Test/components/http_server/: CMakeLists.txt  http_server.c  http_server.h
VXL-ESP/Test/components/test_compo/: CMakeLists.txt  test_compo.c  test_compo.h  update-upgrade.sh
VXL-ESP/Test/components/wifi_connect/: CMakeLists.txt  wifi_connect.c  wifi_connect.h
VXL-ESP/Test/main/: hello_world_main.c
VXL-ESP/Test/test/: CMakeLists.txt  test-server.py  test.c
diagram/: L298N_arduino.drawio  esp_arduino .drawio  lcd_arduino.drawio  server_esp32.drawio
esp-blinkl/BLINK-BLINK/: CMakeLists.txt
esp32cam/: CMakeLists.txt  log.txt
esp32cam/main/: CMakeLists.txt  camera_pins.h  connect_wifi.c  main.c
hello_world/main/: button.h  hello_world_main.c
