idf_component_register(SRCS "test.c"
                    INCLUDE_DIRS ""
                    REQUIRES esp_wifi nvs_flash esp_http_client wifi_connect http_client http_server)

if(DEFINED ENV{WIFI_SSID})
    message(STATUS "Environment variable WIFI_SSID is defined: $ENV{WIFI_SSID}")
    add_compile_definitions(-DWIFI_SSID=$ENV{WIFI_SSID})
    else()
    message(WARNING "Environment variable WIFI_SSID is not defined")
    execute_process(COMMAND ${CMAKE_COMMAND} -E sleep 5)
endif()

if(DEFINED ENV{WIFI_PASSWORD})
    message(STATUS "Environment variable WIFI_PASSWORD is defined")
    add_compile_definitions(-DWIFI_PASSWORD=$ENV{WIFI_PASSWORD})
else()
    message(WARNING "Environment variable WIFI_PASSWORD is not defined")
    execute_process(COMMAND ${CMAKE_COMMAND} -E sleep 5)
endif()

if(DEFINED ENV{SERVER_HOST})
    message(STATUS "Environment variable SERVER_HOST is defined to $ENV{SERVER_HOST}")
    add_compile_definitions(-DSERVER_HOST=$ENV{SERVER_HOST})
else()
    message(WARNING "Environment variable SERVER_HOST is not defined")
    execute_process(COMMAND ${CMAKE_COMMAND} -E sleep 5)
endif()

if(DEFINED ENV{SERVER_PORT})
    message(STATUS "Environment variable SERVER_PORT is defined to $ENV{SERVER_PORT}")
    add_compile_definitions(-DSERVER_PORT=$ENV{SERVER_PORT})
else()
    message(WARNING "Environment variable SERVER_PORT is not defined")
    execute_process(COMMAND ${CMAKE_COMMAND} -E sleep 5)
endif()

if(DEFINED ENV{STATIC_IP})
    message(STATUS "Environment variable STATIC_IP is defined to $ENV{STATIC_IP}")
    add_compile_definitions(-DSTATIC_IP=$ENV{STATIC_IP})
else()
    message(WARNING "Environment variable STATIC_IP is not defined")
    execute_process(COMMAND ${CMAKE_COMMAND} -E sleep 5)
endif()

if(DEFINED ENV{GATEWAY})
    message(STATUS "Environment variable GATEWAY is defined to $ENV{GATEWAY}")
    add_compile_definitions(-DGATEWAY=$ENV{GATEWAY})
else()
    message(WARNING "Environment variable GATEWAY is not defined")
    execute_process(COMMAND ${CMAKE_COMMAND} -E sleep 5)
endif()

if(DEFINED ENV{NETMASK})
    message(STATUS "Environment variable NETMASK is defined to $ENV{NETMASK}")
    add_compile_definitions(-DNETMASK=$ENV{NETMASK})
else()
    message(WARNING "Environment variable NETMASK is not defined")
    execute_process(COMMAND ${CMAKE_COMMAND} -E sleep 5)
endif()